--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -138,6 +138,12 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-file-viewer')
+    implementation project(':react-native-image-picker')
+    implementation project(':react-native-fs')
+    implementation project(':react-native-vector-icons')
+    implementation project(':@react-native-community_async-storage')
+    implementation project(':react-native-gesture-handler')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     implementation "com.facebook.react:react-native:+"  // From node_modules
